create github pages

--- a/Home.html
+++ b/Home.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="header1 cid-rDoTgP6KXQ" id="header16-2">
+<section class="engine"><a href="https://mobirise.info/f">simple website maker</a></section><section class="header1 cid-rDoTgP6KXQ" id="header16-2">
 
     
 
@@ -132,8 +132,7 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-4 display-7">
-                     <p class="p-3">Nuestras peregrinaciones tienen que ver con nosotros para presenciar nuestra fe y el presente y nuestra peregrinación a la vida eterna, la bendita Virgen María y sus mensajes nos hablan en los sitios con realismos que encuentran una parte de sus sitios de aparición que ella ha elegido e invitarnos venir en peregrinaciones para recibir su regalo especial y su hijo en la Eucaristía
-</p><p class="p-3"><br></p>
+                     <p class="p-3">Nuestras peregrinaciones tienen que ver con nosotros para presenciar nuestra fe y el presente y nuestra peregrinación a la vida eterna, la bendita Virgen María y sus mensajes nos hablan en los sitios con realismos que encuentran una parte de sus sitios de aparición que ella ha elegido e invitarnos venir en peregrinaciones para recibir su regalo especial y su hijo en la Eucaristía</p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-4">
                      <p class="p-3">Tierra Santa, la tierra de Jesús, nuestro salvador, que vino a este mundo para darnos vida, murió por nuestros pecados y vino a darnos una vida nueva.
@@ -329,7 +328,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vth3wVnGmiWBQN6gukB5J1EtwBYrgez3eHXcQLe6m3Omol5bgRtzCmPAM9LlJa594/31uzUtfm+pGq+CUXFtmdai1I8PS0Ckbqg0vsqiCPXtTnknk1U/s2iHsDhHih+9">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3fRqdwVA0HqXyy9ia0b9kQ7L/kmUc6SnSRIARZJMhBzzyb7goAVeFgKwWPoMd8rkXhqOtbPWXIAl5+gSb1+QDASJpuX/229nB/LPzICWwWvWMy4PIiIiH9hnpyhLdrBh">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
