create github pages

--- a/Home.html
+++ b/Home.html
@@ -60,14 +60,14 @@
                     <a class="nav-link link text-white display-4" href="contact.html">
                         Contacto<br></a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
                     
                     English</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website maker</a></section><section class="header1 cid-rDoTgP6KXQ" id="header16-2">
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="header1 cid-rDoTgP6KXQ" id="header16-2">
 
     
 
@@ -328,7 +328,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3fRqdwVA0HqXyy9ia0b9kQ7L/kmUc6SnSRIARZJMhBzzyb7goAVeFgKwWPoMd8rkXhqOtbPWXIAl5+gSb1+QDASJpuX/229nB/LPzICWwWvWMy4PIiIiH9hnpyhLdrBh">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pmIEM6Y00Ijkgl/iq6ZV598SWkOutw2OMetUeh/AM/S8Ia9WVey0R/7tw9Guw6Gj0oTz7fIZF6sqWFcSDd+I0Dtsx38oigjjQPQfClp2DN/UPWMUaOraeVbsdt457IkW">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
