--- a/aboutus.html
+++ b/aboutus.html
@@ -59,14 +59,14 @@
                     <a class="nav-link link text-white display-4" href="contact.html">
                         Contacto<br></a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
                     
                     English</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="header1 cid-rDpLaO8ob5" id="header1-1e">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="header1 cid-rDpLaO8ob5" id="header1-1e">
 
     
 
@@ -176,7 +176,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OyCRHu0Kso/e6qu4JNZGV6C+cK7HLE8HnVFcsvC1aHvHgjUWR+01PJIuo8WhRv+QovOtspxtd6qB3KG5sF9RH0QsxzGf1ihYgui8KL+9+TngXzefj9olrm9rKvRLTygb">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PDOXbUhoKK4u7nS/FFavOrRt9Ox+m+MGUfb5WQNT7tWrnusEm37Qobe9FPHFmuJtM1sK+ruw2Wm6GK/vcW17FfwILjiN5VPZu8Y6BNq9NLiy3PdHYKpmKALcYskwZEDc">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
