--- a/franceportugalespaña.html
+++ b/franceportugalespaña.html
@@ -59,14 +59,14 @@
                     <a class="nav-link link text-white display-4" href="contact.html">
                         Contacto<br></a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
                     
                     English</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><section class="header1 cid-rDpLnOf58C" id="header1-1i">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="header1 cid-rDpLnOf58C" id="header1-1i">
 
     
 
@@ -347,7 +347,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dwveaShAxn/Iguqxt89FiyeFtAWpMgul+xRkHmZm0wgCm/ZCVFm0mobCmXmU14Z1naXWQWIhKJUcJUiG8b6OIMrgJ2JxtSxNgWFWaOmROkDYZPd9wg2opzFJDFCE5mKk">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Aohkvi9TWTP+kmLL5uG70oSorAUn/ooc3TYU4uKDSN2VK3r4AMAy8AKUaQw+UxRCCLg1xmccOsDRpWxlFEGjU7V0P7xfj3mD7IbDMaEblHRZU0Aoo10M1SUtSrx+HWs2">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
