--- a/lourdes.html
+++ b/lourdes.html
@@ -59,14 +59,14 @@
                     <a class="nav-link link text-white display-4" href="contact.html">
                         Contacto<br></a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
                     
                     English</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header1 cid-rDpLuGmfKl" id="header1-1j">
+<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="header1 cid-rDpLuGmfKl" id="header1-1j">
 
     
 
@@ -276,7 +276,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="O+IXfGl8dbzZBeUAB1FrEQ2Y1rAreGLrrRI3LhfEPpgV3aN4eX2putuAveVDO2VyX+OEoSzUxmDWwAwzqxwzrVOqRkE2nyc1wAfyhYrmw7RbjtkwHscguP+t1pNIlCmS">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="i4TsoTNkmwefTn2w1B4a4dHre9OH/KNiRZERRv90/Z96A+K//i7+oxP1TI/AvSyANmKiEaTYkr2gp66cn+9sWBBPhpmBru4E/XnLN0UQZU2bZo1nxF6VzOQ39kJQZeBA">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
