--- a/paris.html
+++ b/paris.html
@@ -59,14 +59,14 @@
                     <a class="nav-link link text-white display-4" href="contact.html">
                         Contacto<br></a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
                     
                     English</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own site for free</a></section><section class="header1 cid-rDpLxOAxK9" id="header1-1k">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header1 cid-rDpLxOAxK9" id="header1-1k">
 
     
 
@@ -328,7 +328,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2MzemeI1GWWdjKWKlhK46SFQW1RdIdcO7Y1Yj5qpqeoweLEJv5Khm9TytwTvRlwi3Tu2A8pznyDMjs5+OieoolZL1d7XPVgocVHWm43OtUysLnAEd9q/mGdotGfwlHc6">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2cWvFvjAg8Ap79NKiwNPok99QfmtVNX50phUBAR23NHtt0iCJnxCo84WQEQntikkDtOx2WcCyDb+YMIncdTAuCuemrdBAQV9/7kDxASamZIpN3OKdpskmdpkNZUimtUl">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
