--- a/poland.html
+++ b/poland.html
@@ -59,14 +59,14 @@
                     <a class="nav-link link text-white display-4" href="contact.html">
                         Contacto<br></a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
                     
                     English</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="header1 cid-rDpLBjlrNA" id="header1-1l">
+<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="header1 cid-rDpLBjlrNA" id="header1-1l">
 
     
 
@@ -279,7 +279,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="M3jH0c+FYtDxUjThzPrbNWXh+UuxG92Y20W7Q8IvSAgU3GLTkW1SLYQuZj4rgT6CmS/sVPNh5PwnhfiYfVOpl8IqsiZmCADytbQTMrLCP6UWeM1LPoNokLtF8LMXrQbb">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UVWuONHhkhgQ1E6zCr0NGeKIwZQctqDGuE0Mo9+lHeLZM/cOUahEfssr3F4bj3+/fg9Off/sVc/E60tUF72UY83JD39sRmrMEdZYuzFaYwkYcNQWAHlak6PWPoyXXviJ">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
