--- a/rome.html
+++ b/rome.html
@@ -59,14 +59,14 @@
                     <a class="nav-link link text-white display-4" href="contact.html">
                         Contacto<br></a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
                     
                     English</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="header1 cid-rDpLDMroGA" id="header1-1m">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="header1 cid-rDpLDMroGA" id="header1-1m">
 
     
 
@@ -330,7 +330,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="g2nptIApORbbeOTEt8F89A8w8ljhF+9FWeqWdS1CeNEJVv6if7UHnauDpiotcHydFuvrEMxlDoTqilDddlWyxfXXoGV9zu0Nh1mpknQrD76JnQO4bXOs81U3Ni/eq3Jy">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="75Zcl0DOY4xiQFKv/XY9kN1H0w3FJPZy6RjofQDK/2pV2V4oZn75gsOdVB7gKueQD8FIDhHjE2G2/hsqz8Ud8x7+wJTrik7xAX/enJHHfh1mgl1n6xvSktBdUTyihfej">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
