--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                     <a class="nav-link link text-white display-4" href="contact.html">
                         Contacto<br></a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
                     
                     English</a></div>
         </div>
@@ -94,7 +94,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCx3d07zxHPLvkFBLlAR3Ng8a9wsAsGoJ8&amp;q=place_id:ChIJ85GBtMm0QIYRCPVUqo8Vb60" allowfullscreen=""></iframe></div>
+                <div class="google-map"></div>
             </div>
             <div class="col-md-6">
                 <h2 class="pb-3 align-left mbr-fonts-style display-2">
@@ -117,7 +117,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4XyOSnZi5c8bRZCwRTe3Pr1vsZYyQzqoh2OgN3loO363ar9u1jfYA9Jp6BakmaQXkg4awVGdMNn9945hkHmqXPrE7MWnd6bVWuIN5Ceuidj1ZlGsTpDXHaFn05ykRwDF">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NS/FR7kdPZCdgjDPQF/3F48SQKueNYjVT/fAIoluAuqYe0Aql4V3u2d+lLfRpKMwwsHf8jeLqqRVVDv/pr2J7OdNVkbQs577plNJ+hbU4P08dx0ArzZY6QBFfYQg+K4J">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Gracias por llenar esta forma!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -213,7 +213,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="cHyvxuPWrdaCWgyCtblxxBK2mN3ylzWanlgsu8XgF6nwloJknOadGCbVpHW633H6I4BrHEAkYZUBfKHzPZIRTCsBWgnDjOAnUr7YAzvs13D306+sgc3c/kJClZtNzSej">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Nuob3JT0Ke2izTo5Py653LmGs+WWhgQ7/7XVggWltpjefuI0a1heBDbn8GsTmjQBKJxh++A+0z87UXn8NouHWeSiau4aKePJtX2iBKSbmA3c72Igg7jKjaRnuItrZh13">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
