--- a/fatima.html
+++ b/fatima.html
@@ -59,14 +59,14 @@
                     <a class="nav-link link text-white display-4" href="contact.html">
                         Contacto<br></a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
                     
                     English</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section class="header1 cid-rDpKSvYW11" id="header1-1b">
+<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><section class="header1 cid-rDpKSvYW11" id="header1-1b">
 
     
 
@@ -241,7 +241,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nKzgd2F3D4TD94aQtIGJUYp14nrns0hZNRfeIiErnYHvvkGzyfEhf/UWPao24EmL7EXJeOBjGi5a51Y9WvjWvedg5eyupuVD5DBuHhAN51gxocCA0cK+Xqbg6xNKUjIR">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TOWCV5j3QrW0Jl46seoHfo8+KYYtUdxcd98E7S7/KcCHfiI5S5tn98VPjkH+JqsNBx5K11El9IcA1xCLFawZIRh5fXICSskvoNEhueG8/6nQZshim+v/dDf7d7B0K5Hj">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
