--- a/holyland.html
+++ b/holyland.html
@@ -59,14 +59,14 @@
                     <a class="nav-link link text-white display-4" href="contact.html">
                         Contacto<br></a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
                     
                     English</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="header1 cid-rDpLkolbiU" id="header1-1h">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="header1 cid-rDpLkolbiU" id="header1-1h">
 
     
 
@@ -243,7 +243,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="XLqKHtRH5fExsCLNb2WiYHaoljwerH/rqgKlyDBMOsRKqqvHIoHoURwDZqfq9EcZYEzFEimfkJHRTxs3VU9+NKk/Uu2/wxLSh4V+5HarEnykZaP6I5vPJUXYIcohBfJ2">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EOcJa76KG9C62/uSgBhRVWA94gE/DZxIsoqAqImo+44DoG1N65YwmmzvpQbyxwsirjPsYKe7E0qi1OfdKcsGOBvW+nL38aNizZloaymFNTrTUaH1fNBAxM3S+g0WZHAy">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
