--- a/mexico.html
+++ b/mexico.html
@@ -59,14 +59,14 @@
                     <a class="nav-link link text-white display-4" href="contact.html">
                         Contacto<br></a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://brunodc93.github.io/chamberstravelsssss/Home.html">
                     
                     English</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="header1 cid-rDpa92ezaH" id="header1-11">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page for free</a></section><section class="header1 cid-rDpa92ezaH" id="header1-11">
 
     
 
@@ -285,7 +285,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5cYUMQmQp/DtOpoaOxehIb+2g86hvJgskiB6L/YZtWYKCJ1L/7NEpdHJf5Eyx5D146mFpeCSv4liyGmKqsEREGKUU5hBdZRcCeAZdBJfi3yptNxdLV68xMgn/2gt75CA">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kFQjMDUNpAz9asNsP19wzd8ktI2qyH1wtT3uigGnp3BGILm47Fz96L6PYcX3Jl0dxoNMyvB00g0XrqWBXnGfElRIn9j7KdckkfbwIBpLgDstUPIY7eSyjXn29w4rMBYo">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
